--- a/includes/gbt-blocks/posts_slider/assets/css/style.css
+++ b/includes/gbt-blocks/posts_slider/assets/css/style.css
@@ -9,26 +9,41 @@
   .gbt_18_mt_posts_slider .swiper-container .swiper-wrapper {
     padding-bottom: 20px; }
   .gbt_18_mt_posts_slider .swiper-container .swiper-slide {
-    padding: 0 0 35px 0; }
+    padding: 0 0 50px 0; }
+    .gbt_18_mt_posts_slider .swiper-container .swiper-slide a {
+      text-decoration: none; }
     .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_title {
-      margin: 0 0 12px; }
+      margin: 0 0 12px;
+      -webkit-transition: all .3s ease;
+      -o-transition: all .3s ease;
+      transition: all .3s ease; }
     .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_title,
     .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_date {
       text-align: center; }
+    .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_date {
+      font-size: 13px;
+      font-weight: bold;
+      opacity: .45;
+      text-transform: uppercase;
+      -webkit-transition: all .3s ease;
+      -o-transition: all .3s ease;
+      transition: all .3s ease; }
     .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_link {
       display: block;
       overflow: hidden;
       position: relative;
-      height: 245px;
       width: 100%;
       margin-bottom: 18px;
       -webkit-mask-image: -webkit-radial-gradient(white, black); }
     .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_img {
       display: block;
       width: 100%;
-      height: 100%;
+      height: 250px;
       background-position: center center;
       background-size: cover;
+      position: relative;
+      overflow: hidden;
+      margin-bottom: 25px;
       -webkit-transition: all 1s ease;
       -o-transition: all 1s ease;
       transition: all 1s ease; }
@@ -36,25 +51,39 @@
       background: #f5f5f5;
       height: 245px;
       width: 100%;
-      display: block; }
-    .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_overlay {
-      background: rgba(0, 0, 0, 0);
+      display: block;
+      overflow: hidden;
+      margin-bottom: 25px;
+      position: relative; }
+    .gbt_18_mt_posts_slider .swiper-container .swiper-slide .more-link {
+      border-radius: 0 0 3px 3px;
+      font-weight: bold;
+      padding: 20px;
       position: absolute;
+      bottom: -40px;
+      margin: 0;
       width: 100%;
-      height: 100%;
-      z-index: 1;
-      -webkit-transition: all .3s ease;
-      -o-transition: all .3s ease;
-      transition: all .3s ease; }
-    .gbt_18_mt_posts_slider .swiper-container .swiper-slide:hover .gbt_18_mt_posts_slider_overlay {
-      background: rgba(0, 0, 0, 0.4);
-      -webkit-transition: all .3s ease;
-      -o-transition: all .3s ease;
-      transition: all .3s ease; }
-    .gbt_18_mt_posts_slider .swiper-container .swiper-slide:hover .gbt_18_mt_posts_slider_img {
-      -webkit-transform: translateZ(0) scale(1.1, 1.1);
-      transform: translateZ(0) scale(1.1, 1.1);
-      -ms-transform: none; }
+      max-height: 0;
+      opacity: 0;
+      visibility: hidden;
+      -webkit-transition: all .4s ease;
+      -o-transition: all .4s ease;
+      transition: all .4s ease;
+      text-transform: initial; }
+    .gbt_18_mt_posts_slider .swiper-container .swiper-slide .arrow-icon {
+      background-repeat: no-repeat;
+      background-position: center;
+      float: right;
+      height: 20px;
+      width: 20px; }
+    .gbt_18_mt_posts_slider .swiper-container .swiper-slide:hover .more-link {
+      bottom: 0;
+      max-height: 100px;
+      opacity: 1;
+      visibility: visible;
+      -webkit-transition: all .4s ease;
+      -o-transition: all .4s ease;
+      transition: all .4s ease; }
   .gbt_18_mt_posts_slider:hover .swiper-button-prev {
     left: -55px;
     opacity: 1;
@@ -71,7 +100,6 @@
     transition: all .3s; }
   .gbt_18_mt_posts_slider .swiper-button-prev,
   .gbt_18_mt_posts_slider .swiper-button-next {
-    background-size: 15px;
     background-position: center;
     background-repeat: no-repeat;
     height: 55px;
@@ -82,6 +110,10 @@
     -o-transition: all .3s;
     transition: all .3s;
     outline: 0; }
+    @media only screen and (max-width: 1023px) {
+      .gbt_18_mt_posts_slider .swiper-button-prev,
+      .gbt_18_mt_posts_slider .swiper-button-next {
+        display: none; } }
     .gbt_18_mt_posts_slider .swiper-button-prev:after,
     .gbt_18_mt_posts_slider .swiper-button-next:after {
       content: none; }
@@ -96,5 +128,13 @@
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
     right: -90px;
     visibility: hidden; }
-  .gbt_18_mt_posts_slider .swiper-pagination-bullet-active {
-    background-color: #000000; }
+  .gbt_18_mt_posts_slider .swiper-pagination .swiper-pagination-bullet {
+    width: 6px;
+    height: 6px;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease; }
+  .gbt_18_mt_posts_slider .swiper-pagination .swiper-pagination-bullet-active {
+    -webkit-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    transform: scale(1.4); }
