--- a/includes/gbt-blocks/posts_slider/assets/css/style.css
+++ b/includes/gbt-blocks/posts_slider/assets/css/style.css
@@ -1,7 +1,7 @@
 .gbt_18_mt_posts_slider {
   position: relative; }
   .gbt_18_mt_posts_slider.alignfull {
-    padding: 0 30px; }
+    padding: 0 30px !important; }
     .gbt_18_mt_posts_slider.alignfull:hover .swiper-button-prev {
       left: -9px; }
     .gbt_18_mt_posts_slider.alignfull:hover .swiper-button-next {
@@ -38,7 +38,8 @@
     .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_img {
       display: block;
       width: 100%;
-      height: 250px;
+      height: 0;
+      padding-bottom: 55%;
       background-position: center center;
       background-size: cover;
       position: relative;
@@ -49,7 +50,8 @@
       transition: all 1s ease; }
     .gbt_18_mt_posts_slider .swiper-container .swiper-slide .gbt_18_mt_posts_slider_noimg {
       background: #f5f5f5;
-      height: 245px;
+      height: 0;
+      padding-bottom: 55%;
       width: 100%;
       display: block;
       overflow: hidden;
@@ -102,6 +104,7 @@
   .gbt_18_mt_posts_slider .swiper-button-next {
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 24px;
     height: 55px;
     width: 55px;
     opacity: 0;
