--- a/includes/gbt-blocks/posts_slider/assets/scss/editor.scss
+++ b/includes/gbt-blocks/posts_slider/assets/scss/editor.scss
@@ -1,5 +1,5 @@
 .gbt_18_mt_editor_posts_slider {
-	overflow: auto; 
+	overflow: auto;
 
 	.gbt_18_mt_editor_posts_slider_wrapper {
 
@@ -41,7 +41,7 @@
 
 			.gbt_18_mt_editor_posts_slider_item_img {
 			    background-size: cover;
-			    padding-bottom: 70%;
+			    padding-bottom: 55%;
 			    width: 100%;
 
 				&.gbt_18_mt_editor_posts_slider_noimg {
@@ -50,18 +50,20 @@
 			}
 
 			.gbt_18_mt_editor_posts_slider_item_text {
-				padding: 10px 10px 0;
+				padding: 25px 10px 0;
 
 				.gbt_18_mt_editor_posts_slider_item_title {
-					font-size: 20px;
-					line-height: 1.4;
+					line-height: 1.2;
 					margin: 0;
 				}
 
 				.gbt_18_mt_editor_posts_slider_item_date {
 					text-transform: uppercase;
-					font-size: 12px;
-					color: #909090;
+					font-size: 13px;
+					font-weight: bold;
+					opacity: .45;
+					margin-top: 15px;
+					display: block;
 				}
 			}
 		}
@@ -70,8 +72,8 @@
 	.swiper-button-next, .swiper-button-prev {
 	    position: absolute;
 	    top: 50%;
-	    width: 60px;
-	    height: 60px;
+	    width: 55px;
+	    height: 55px;
 	    margin-top: -22px;
 	    z-index: 10;
 	    cursor: pointer;
@@ -83,7 +85,7 @@
 	    font-family: "dashicons";
 
 	    &:before {
-    	    font-size: 24px;
+    	    font-size: 22px;
 		    vertical-align: middle;
 	    }
 	}
@@ -110,11 +112,17 @@
 	    border-radius: 100%;
 	    margin: 5px;
 	    background: #000;
+		opacity: .2;
 	    transition: all .3s ease;
+
+		&:nth-child(3) {
+			transform: scale(1.4);
+			opacity: 1;
+		}
 	}
 }
 
-.editor-block-list__block[data-type="getbowtied/mt-posts-slider"] {
+.wp-block[data-type="getbowtied/mt-posts-slider"] {
 	&.is-selected,
 	&.is-hovered {
 		.swiper-button-next, .swiper-button-prev {
