--- a/includes/gbt-blocks/posts_slider/assets/scss/style.scss
+++ b/includes/gbt-blocks/posts_slider/assets/scss/style.scss
@@ -3,7 +3,7 @@
 	position: relative;
 
 	&.alignfull {
-	    padding: 0 30px;
+	    padding: 0 30px !important;
 
 	    &:hover {
 	    	.swiper-button-prev {
@@ -60,7 +60,8 @@
 			.gbt_18_mt_posts_slider_img {
 				display: block;
 				width: 100%;
-				height: 250px;
+				height: 0;
+				padding-bottom: 55%;
 				background-position: center center;
 				background-size: cover;
 				position: relative;
@@ -71,7 +72,8 @@
 
 			.gbt_18_mt_posts_slider_noimg {
 				background: #f5f5f5;
-				height: 245px;
+				height: 0;
+				padding-bottom: 55%;
 				width: 100%;
 				display: block;
 				overflow: hidden;
@@ -135,6 +137,7 @@
 	.swiper-button-next {
 		background-position: center;
 		background-repeat: no-repeat;
+		background-size: 24px;
         height: 55px;
         width: 55px;
         opacity: 0;
