--- a/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/frontend/grid.scss
@@ -2,13 +2,7 @@
 
 	&.alignfull {
 		.gbt_18_mt_posts_grid_wrapper {
-		    margin: 0 20px;
-		}
-	}
-
-	&:not(.alignfull) {
-		.gbt_18_mt_posts_grid_wrapper {
-		    margin: 0 -15px;
+		    margin: 0 30px;
 		}
 	}
 
@@ -16,107 +10,54 @@
 		position: relative;
 	  	overflow: hidden;
 
+		.gbt_18_mt_posts_grid_items {
+			display: grid;
+			grid-gap: 3rem 30px;
+		}
+
 		&.columns-2 {
-
-			.gbt_18_mt_posts_grid_item {
-
-				@media all and (min-width: 640px) {
-					width: 50%;
-					float: left;
-
-					&:nth-child(2n+1) {
-						clear: both;
-					}
-				}
-
-				@media all and (max-width: 639px) {
-					width: 100%;
-					float: left;
+			.gbt_18_mt_posts_grid_items {
+				grid-template-columns: 1fr 1fr;
+				@media only screen and (max-width: 640px) {
+					grid-template-columns: 1fr;
 				}
 			}
 		}
 
 		&.columns-3 {
-
-			.gbt_18_mt_posts_grid_item {
-
-				@media all and (min-width: 1024px) {
-					width: 33.333333%;
-					float: left;
-
-					&:nth-child(3n+1) {
-						clear: both;
-					}
+			.gbt_18_mt_posts_grid_items {
+				grid-template-columns: 1fr 1fr 1fr;
+				@media only screen and (max-width: 1023px) {
+					grid-template-columns: 1fr 1fr;
 				}
-
-				@media all and (min-width: 640px) and (max-width: 1023px) {
-					width: 50%;
-					float: left;
-
-					&:nth-child(2n+1) {
-						clear: both;
-					}
-				}
-
-				@media all and (max-width: 639px) {
-					width: 100%;
-					float: left;
+				@media only screen and (max-width: 640px) {
+					grid-template-columns: 1fr;
 				}
 			}
 		}
 
 		&.columns-4 {
-
-			.gbt_18_mt_posts_grid_item {
-
-				@media all and (min-width: 1240px) {
-					width: 25%;
-					float: left;
-
-					&:nth-child(4n+1) {
-						clear: both;
-					}
+			.gbt_18_mt_posts_grid_items {
+				grid-template-columns: 1fr 1fr 1fr 1fr;
+				@media only screen and (max-width: 1023px) {
+					grid-template-columns: 1fr 1fr;
 				}
-
-				@media all and (min-width: 1024px) and (max-width: 1239px) {
-					width: 33.333333%;
-					float: left;
-
-					&:nth-child(3n+1) {
-						clear: both;
-					}
-				}
-
-				@media all and (min-width: 640px) and (max-width: 1023px) {
-					width: 50%;
-					float: left;
-
-					&:nth-child(2n+1) {
-						clear: both;
-					}
-				}
-
-				@media all and (max-width: 639px) {
-					width: 100%;
-					float: left;
+				@media only screen and (max-width: 640px) {
+					grid-template-columns: 1fr;
 				}
 			}
 		}
 
-		.gbt_18_mt_posts_grid_item {
-			padding: 0 15px;	
-		    margin-bottom: 2rem;
-
-		    @media all and (max-width: 639px) {
-				padding: 0 0;
-			}
+		a {
+			text-decoration: none;
 		}
 
 		.gbt_18_mt_posts_grid_title {
 			display: block;
 			text-align: left;
-			margin: 0 0 15px;
+			margin: 0;
 		    transition: all .5s;
+			text-align: center;
 
 			&:hover {
 			    opacity: 1;
@@ -124,19 +65,38 @@
 			}
 		}
 
-		.gbt_18_mt_posts_grid_img_overlay {
-			display: block;
+		.more-link {
+			border-radius: 0 0 3px 3px;
+			font-weight: bold;
+			padding: 20px;
 			position: absolute;
+			bottom: -40px;
+			margin: 0;
 			width: 100%;
-			height: 100%;
-			z-index: 2;
+			max-height: 0;
+			line-height: 1.4;
 			opacity: 0;
-			transition: all .35s ease;
-		    background: rgba(255, 255, 255, 0.6);
+			visibility: hidden;
+			transition: all .4s ease;
+			text-transform: initial;
 		}
 
-		.gbt_18_mt_posts_grid_img_container:hover .gbt_18_mt_posts_grid_img_overlay {
-			opacity: 0.6;
+		.arrow-icon {
+			background-repeat: no-repeat;
+			background-position: center;
+			float: right;
+			height: 20px;
+			width: 20px;
+		}
+
+		.gbt_18_mt_posts_grid_item:hover {
+			.more-link {
+				bottom: 0;
+				max-height: 100px;
+				opacity: 1;
+				visibility: visible;
+				transition: all .4s ease;
+			}
 		}
 
 		.gbt_18_mt_posts_grid_img_container {
@@ -144,37 +104,18 @@
 			overflow: hidden;
 			position: relative;
 			width: 100%;
-			padding-bottom: 100%;
-			margin-bottom: 35px;
-			
+			padding-bottom: 55%;
+			margin-bottom: 25px;
 			-webkit-mamt-image: -webkit-radial-gradient(white, black);
-
-			@media all and (min-width: 640px) and (max-width: 1023px) {
-		    	margin-bottom: 25px;
-		    }
-
-		    @media all and (max-width: 639px) {
-		    	margin-bottom: 20px;
-		    }
-
-		    &:hover {
-		    	.gbt_18_mt_posts_grid_img {
-					background-position-x: 0px;
-				}
-			}
-		}	
+		}
 
 		.gbt_18_mt_posts_grid_img {
 			display: block;
 			position: absolute;
 			width: 100%;
-			padding-bottom: 100%;
-			background-position-x: -50px;
-			background-position-y: center;
-			background-size:cover;		
-			width: -webkit-calc(100% + 50px);
-			width: calc(100% + 50px);
-			max-width: none;
+			height: 100%;
+			background-position: center;
+			background-size: cover;
 			transition: all 0.35s ease-in-out;
 		}
 
