--- a/includes/gbt-blocks/posts_slider/assets/css/style.css
+++ b/includes/gbt-blocks/posts_slider/assets/css/style.css
@@ -66,6 +66,7 @@
       margin: 0;
       width: 100%;
       max-height: 0;
+      line-height: 1.4;
       opacity: 0;
       visibility: hidden;
       -webkit-transition: all .4s ease;
