--- a/includes/gbt-blocks/posts_slider/assets/scss/style.scss
+++ b/includes/gbt-blocks/posts_slider/assets/scss/style.scss
@@ -90,6 +90,7 @@
 				margin: 0;
 				width: 100%;
 				max-height: 0;
+				line-height: 1.4;
 				opacity: 0;
 				visibility: hidden;
 				transition: all .4s ease;
