--- a/includes/gbt-blocks/banner/assets/scss/style.scss
+++ b/includes/gbt-blocks/banner/assets/scss/style.scss
@@ -84,6 +84,7 @@
 					z-index: 999;
 
 					.gbt_18_mt_banner_title {
+						font-weight: bold;
 						padding: 0;
 						margin: 0 0 0.5rem 0;
 					}
