--- a/includes/gbt-blocks/posts_grid/assets/css/frontend/style.css
+++ b/includes/gbt-blocks/posts_grid/assets/css/frontend/style.css
@@ -1,45 +1,45 @@
-.gbt_18_mt_posts_grid.is-style-default.alignfull .gbt_18_mt_posts_grid_wrapper {
+.gbt_18_mt_posts_grid.alignfull .gbt_18_mt_posts_grid_wrapper {
   margin: 0 30px; }
 
-.gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper {
+.gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper {
   position: relative;
   overflow: hidden; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_items {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_items {
     display: -ms-grid;
     display: grid;
     grid-gap: 3rem 30px; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-2 .gbt_18_mt_posts_grid_items {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-2 .gbt_18_mt_posts_grid_items {
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr; }
     @media only screen and (max-width: 640px) {
-      .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-2 .gbt_18_mt_posts_grid_items {
+      .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-2 .gbt_18_mt_posts_grid_items {
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr; } }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-3 .gbt_18_mt_posts_grid_items {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-3 .gbt_18_mt_posts_grid_items {
     -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr; }
     @media only screen and (max-width: 1023px) {
-      .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-3 .gbt_18_mt_posts_grid_items {
+      .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-3 .gbt_18_mt_posts_grid_items {
         -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr; } }
     @media only screen and (max-width: 640px) {
-      .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-3 .gbt_18_mt_posts_grid_items {
+      .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-3 .gbt_18_mt_posts_grid_items {
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr; } }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-4 .gbt_18_mt_posts_grid_items {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-4 .gbt_18_mt_posts_grid_items {
     -ms-grid-columns: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr; }
     @media only screen and (max-width: 1023px) {
-      .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-4 .gbt_18_mt_posts_grid_items {
+      .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-4 .gbt_18_mt_posts_grid_items {
         -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr; } }
     @media only screen and (max-width: 640px) {
-      .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper.columns-4 .gbt_18_mt_posts_grid_items {
+      .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper.columns-4 .gbt_18_mt_posts_grid_items {
         -ms-grid-columns: 1fr;
         grid-template-columns: 1fr; } }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper a {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper a {
     text-decoration: none; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_title {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_title {
     display: block;
     text-align: left;
     margin: 0;
@@ -47,12 +47,12 @@
     -o-transition: all .5s;
     transition: all .5s;
     text-align: center; }
-    .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_title:hover {
+    .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_title:hover {
       opacity: 1;
       -webkit-transition: all .5s;
       -o-transition: all .5s;
       transition: all .5s; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .more-link {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .more-link {
     border-radius: 0 0 3px 3px;
     font-weight: bold;
     padding: 20px;
@@ -68,13 +68,13 @@
     -o-transition: all .4s ease;
     transition: all .4s ease;
     text-transform: initial; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .arrow-icon {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .arrow-icon {
     background-repeat: no-repeat;
     background-position: center;
     float: right;
     height: 20px;
     width: 20px; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_item:hover .more-link {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_item:hover .more-link {
     bottom: 0;
     max-height: 100px;
     opacity: 1;
@@ -82,7 +82,7 @@
     -webkit-transition: all .4s ease;
     -o-transition: all .4s ease;
     transition: all .4s ease; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_img_container {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_img_container {
     display: block;
     overflow: hidden;
     position: relative;
@@ -90,7 +90,7 @@
     padding-bottom: 55%;
     margin-bottom: 25px;
     -webkit-mamt-image: -webkit-radial-gradient(white, black); }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_img {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_img {
     display: block;
     position: absolute;
     width: 100%;
@@ -100,117 +100,8 @@
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
     transition: all 0.35s ease-in-out; }
-  .gbt_18_mt_posts_grid.is-style-default .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_noimg {
+  .gbt_18_mt_posts_grid .gbt_18_mt_posts_grid_wrapper .gbt_18_mt_posts_grid_noimg {
     background: #f5f5f5;
     height: 100%;
     width: 100%;
     display: block; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item {
-  position: relative;
-  margin: 0 0 10px; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_img {
-  background-color: #000; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_link {
-  display: block;
-  overflow: hidden;
-  position: relative;
-  text-decoration: none !important;
-  width: 100%;
-  -webkit-mask-image: -webkit-radial-gradient(white, black); }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_img_overlay {
-  display: block;
-  background: rgba(0, 0, 0, 0);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  -webkit-transition: all .3s ease;
-  -o-transition: all .3s ease;
-  transition: all .3s ease; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_link:hover .gbt_18_mt_posts_grid_img_overlay {
-  background: rgba(0, 0, 0, 0.6); }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_img {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-position: center center;
-  background-size: cover;
-  -webkit-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_link:hover .gbt_18_mt_posts_grid_img {
-  transform: translateZ(0) scale(1.1, 1.1);
-  -moz-transform: translateZ(0) scale(1.1, 1.1);
-  -webkit-transform: translateZ(0) scale(1.1, 1.1);
-  -ms-transform: none; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_content_wrapper {
-  display: table;
-  color: #fff;
-  padding: 50px 0px;
-  width: 100%;
-  position: relative;
-  z-index: 10; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_content_inner {
-  display: table-row; }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_day {
-  display: table-cell;
-  vertical-align: top;
-  font-size: 30px;
-  line-height: 20px;
-  text-align: left;
-  padding-left: 30px;
-  width: 80px;
-  min-width: 80px; }
-  @media only screen and (min-width: 40.063em) {
-    .gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_day {
-      vertical-align: middle;
-      font-size: 75px;
-      line-height: 50px;
-      text-align: center;
-      padding-left: 0;
-      width: 170px;
-      min-width: 170px; } }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_content {
-  display: table-cell;
-  vertical-align: top;
-  padding-left: 18px;
-  padding-right: 30px;
-  border-left: 2px solid; }
-  @media only screen and (min-width: 40.063em) {
-    .gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_content {
-      padding-left: 50px;
-      padding-right: 50px; } }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_date {
-  display: block;
-  font-size: 12px;
-  text-transform: uppercase;
-  margin: -1px 0 7px 3px;
-  text-align: left; }
-  @media only screen and (min-width: 40.063em) {
-    .gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_date {
-      font-size: 14px;
-      margin: 0 0 5px; } }
-
-.gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_title {
-  font-size: 24px;
-  line-height: 1.2;
-  color: #fff;
-  margin: 0 0 -4px;
-  text-align: left; }
-  @media only screen and (min-width: 40.063em) {
-    .gbt_18_mt_posts_grid.is-style-list .gbt_18_mt_posts_grid_item_title {
-      font-size: 30px;
-      margin: 0 0 -3px; } }
