--- a/includes/gbt-blocks/posts_grid/assets/scss/backend/editor.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/backend/editor.scss
@@ -1,3 +1,88 @@
-@import 'grid';
-@import 'list';
-@import 'preview';
+.gbt_18_mt_posts_grid
+{
+	.gbt_18_mt_editor_posts_grid_wrapper
+	{
+		position: relative;
+		display: grid;
+  		grid-gap: 3rem 30px;
+
+		&.columns-2 {
+			grid-template-columns: 1fr 1fr;
+			@media only screen and (max-width: 640px) {
+				grid-template-columns: 1fr;
+			}
+		}
+
+		&.columns-3 {
+			grid-template-columns: 1fr 1fr 1fr;
+			@media only screen and (max-width: 1023px) {
+				grid-template-columns: 1fr 1fr;
+			}
+			@media only screen and (max-width: 640px) {
+				grid-template-columns: 1fr;
+			}
+		}
+
+		&.columns-4 {
+			grid-template-columns: 1fr 1fr 1fr 1fr;
+			@media only screen and (max-width: 1023px) {
+				grid-template-columns: 1fr 1fr;
+			}
+			@media only screen and (max-width: 640px) {
+				grid-template-columns: 1fr;
+			}
+		}
+
+		a {
+			text-decoration: none;
+		}
+
+		.gbt_18_mt_editor_posts_grid_title {
+			display: block;
+			text-align: left;
+			line-height: 1.2;
+			color: #000;
+			margin: 0;
+			text-align: center;
+		    transition: all .5s;
+		}
+
+		.gbt_18_mt_editor_posts_grid_img_container
+		{
+			display: block;
+			overflow: hidden;
+			position: relative;
+			padding-bottom: 55%;
+			height: 0;
+			width: 100%;
+			margin-bottom: 25px;
+
+			-webkit-mamt-image: -webkit-radial-gradient(white, black);
+		}
+
+		.gbt_18_mt_editor_posts_grid_img
+		{
+			display: block;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-position: center center;
+			background-size:cover;
+			transition: opacity 0.35s, transform 0.35s;
+		}
+
+		.gbt_18_mt_editor_posts_grid_noimg
+		{
+			background: #f5f5f5;
+			height: 100%;
+			width: 100%;
+			display: block;
+		}
+	}
+}
+
+.wp-block[data-type="getbowtied/mt-posts-grid"][data-align="full"] {
+	.gbt_18_mt_posts_grid {
+		padding: 0 30px;
+	}
+}
