--- a/includes/gbt-blocks/posts_grid/assets/scss/frontend/style.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/frontend/style.scss
@@ -1,2 +1,129 @@
-@import 'grid';
-@import 'list';
+.gbt_18_mt_posts_grid {
+
+	&.alignfull {
+		.gbt_18_mt_posts_grid_wrapper {
+		    margin: 0 30px;
+		}
+	}
+
+	.gbt_18_mt_posts_grid_wrapper {
+		position: relative;
+	  	overflow: hidden;
+
+		.gbt_18_mt_posts_grid_items {
+			display: grid;
+			grid-gap: 3rem 30px;
+		}
+
+		&.columns-2 {
+			.gbt_18_mt_posts_grid_items {
+				grid-template-columns: 1fr 1fr;
+				@media only screen and (max-width: 640px) {
+					grid-template-columns: 1fr;
+				}
+			}
+		}
+
+		&.columns-3 {
+			.gbt_18_mt_posts_grid_items {
+				grid-template-columns: 1fr 1fr 1fr;
+				@media only screen and (max-width: 1023px) {
+					grid-template-columns: 1fr 1fr;
+				}
+				@media only screen and (max-width: 640px) {
+					grid-template-columns: 1fr;
+				}
+			}
+		}
+
+		&.columns-4 {
+			.gbt_18_mt_posts_grid_items {
+				grid-template-columns: 1fr 1fr 1fr 1fr;
+				@media only screen and (max-width: 1023px) {
+					grid-template-columns: 1fr 1fr;
+				}
+				@media only screen and (max-width: 640px) {
+					grid-template-columns: 1fr;
+				}
+			}
+		}
+
+		a {
+			text-decoration: none;
+		}
+
+		.gbt_18_mt_posts_grid_title {
+			display: block;
+			text-align: left;
+			margin: 0;
+		    transition: all .5s;
+			text-align: center;
+
+			&:hover {
+			    opacity: 1;
+		        transition: all .5s;
+			}
+		}
+
+		.more-link {
+			border-radius: 0 0 3px 3px;
+			font-weight: bold;
+			padding: 20px;
+			position: absolute;
+			bottom: -40px;
+			margin: 0;
+			width: 100%;
+			max-height: 0;
+			line-height: 1.4;
+			opacity: 0;
+			visibility: hidden;
+			transition: all .4s ease;
+			text-transform: initial;
+		}
+
+		.arrow-icon {
+			background-repeat: no-repeat;
+			background-position: center;
+			float: right;
+			height: 20px;
+			width: 20px;
+		}
+
+		.gbt_18_mt_posts_grid_item:hover {
+			.more-link {
+				bottom: 0;
+				max-height: 100px;
+				opacity: 1;
+				visibility: visible;
+				transition: all .4s ease;
+			}
+		}
+
+		.gbt_18_mt_posts_grid_img_container {
+			display: block;
+			overflow: hidden;
+			position: relative;
+			width: 100%;
+			padding-bottom: 55%;
+			margin-bottom: 25px;
+			-webkit-mamt-image: -webkit-radial-gradient(white, black);
+		}
+
+		.gbt_18_mt_posts_grid_img {
+			display: block;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			background-position: center;
+			background-size: cover;
+			transition: all 0.35s ease-in-out;
+		}
+
+		.gbt_18_mt_posts_grid_noimg {
+			background: #f5f5f5;
+			height: 100%;
+			width: 100%;
+			display: block;
+		}
+	}
+}
