--- a/includes/shortcodes/assets/css/from-the-blog-slider.css
+++ b/includes/shortcodes/assets/css/from-the-blog-slider.css
@@ -63,51 +63,6 @@
   -ms-transform: none;
   transform: none; }
 
-.from-the-blog-wrapper .with_thumb_icon {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  display: block;
-  background: #314381;
-  top: 0;
-  left: 0;
-  text-align: center;
-  color: #fff;
-  line-height: 50px;
-  z-index: 3; }
-
-.from-the-blog-wrapper .no_thumb_icon {
-  line-height: 245px;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  color: #fff;
-  z-index: 3; }
-
-.from-the-blog-wrapper .no_thumb_icon:before,
-.from-the-blog-wrapper .with_thumb_icon:before {
-  display: inline-block;
-  vertical-align: middle;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  z-index: 3; }
-
-.from-the-blog-wrapper .with_thumb_icon:before {
-  font-size: 18px; }
-
-.from-the-blog-wrapper .no_thumb_icon:before {
-  font-size: 78px; }
-
-.from-the-blog-wrapper .from_the_blog_item.standard .with_thumb_icon {
-  display: none; }
-
 .from-the-blog-wrapper .no_thumb .from_the_blog_img {
   line-height: 245px; }
 
@@ -118,7 +73,7 @@
   display: block; }
 
 .from-the-blog-wrapper .swiper-pagination {
-  padding: 0 0 50px;
+  padding: 2rem 0;
   position: relative;
   width: 100% !important; }
   .from-the-blog-wrapper .swiper-pagination span.swiper-pagination-bullet {
