--- a/includes/social-media/assets/css/social-media.css
+++ b/includes/social-media/assets/css/social-media.css
@@ -22,20 +22,14 @@
         vertical-align: top; }
 
 #site-top-bar .site-social-icons-shortcode {
-  float: right;
-  -webkit-box-ordinal-group: 3;
-  -ms-flex-order: 2;
-  order: 2;
   -ms-flex-negative: 0;
   flex-shrink: 0;
   text-align: center;
-  margin: 0;
-  max-width: 260px; }
+  margin: 0; }
   #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list {
     line-height: 1;
     list-style: none;
     margin: 0;
-    padding: 0 0 0 20px;
     overflow: auto; }
     #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon {
       padding: 12px 7px 5px 7px;
@@ -46,6 +40,8 @@
           -webkit-transition: all .3s ease;
           -o-transition: all .3s ease;
           transition: all .3s ease; }
+      #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon:first-child {
+        padding: 11px 7px 4px 0; }
       #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon:last-child {
         padding: 11px 0 4px 7px; }
 
