product category spacing

--- a/includes/addons/assets/scss/wc-category-header-image.scss
+++ b/includes/addons/assets/scss/wc-category-header-image.scss
@@ -9,6 +9,10 @@
         color: #fff;
     }
 
+    .woocommerce-products-header__title {
+        margin-bottom: 1rem;
+    }
+
     .woocommerce-breadcrumb {
         color: rgba( 255, 255, 255, .45 );
 
