--- a/includes/addons/assets/css/wc-category-header-image.css
+++ b/includes/addons/assets/css/wc-category-header-image.css
@@ -6,6 +6,8 @@
   .category_header.with_featured_img h1,
   .category_header.with_featured_img .woocommerce-breadcrumb a {
     color: #fff; }
+  .category_header.with_featured_img .woocommerce-products-header__title {
+    margin-bottom: 1rem; }
   .category_header.with_featured_img .woocommerce-breadcrumb {
     color: rgba(255, 255, 255, 0.45); }
     .category_header.with_featured_img .woocommerce-breadcrumb a:hover {
