--- a/includes/social-media/assets/scss/social-media.scss
+++ b/includes/social-media/assets/scss/social-media.scss
@@ -58,7 +58,7 @@
 
 		    li.mt_social_icon
 		    {
-	    	    padding: 12px 7px 5px 7px;
+	    	    padding: 4px 7px 0 7px;
     			float: left;
 
 				a {
@@ -71,12 +71,12 @@
 
 				&:first-child
     			{
-				    padding: 11px 7px 4px 0;
+				    padding: 4px 7px 0 0;
 				}
 
     			&:last-child
     			{
-				    padding: 11px 0 4px 7px;
+				    padding: 4px 0 0 7px;
 				}
 		    }
     	}
