--- a/includes/addons/assets/scss/wc-category-header-image.scss
+++ b/includes/addons/assets/scss/wc-category-header-image.scss
@@ -10,7 +10,7 @@
     }
 
     .woocommerce-products-header__title {
-        margin-bottom: 1rem;
+        margin-bottom: 25px;
     }
 
     .woocommerce-breadcrumb {
