--- a/includes/addons/assets/css/wc-category-header-image.css
+++ b/includes/addons/assets/css/wc-category-header-image.css
@@ -5,13 +5,11 @@
   .category_header.with_featured_img h1,
   .category_header.with_featured_img .woocommerce-breadcrumb a {
     color: #fff; }
-  .category_header.with_featured_img .woocommerce-products-header__title {
-    margin-bottom: 25px; }
   .category_header.with_featured_img .woocommerce-breadcrumb {
     color: rgba(255, 255, 255, 0.45); }
     .category_header.with_featured_img .woocommerce-breadcrumb a:hover {
       color: #fff;
       opacity: .45; }
   .category_header.with_featured_img .term-description {
-    margin: 0 0 50px 0;
+    margin: 25px 0 50px 0;
     position: relative; }
