--- a/includes/addons/assets/scss/wc-category-header-image.scss
+++ b/includes/addons/assets/scss/wc-category-header-image.scss
@@ -8,10 +8,6 @@
         color: #fff;
     }
 
-    .woocommerce-products-header__title {
-        margin-bottom: 25px;
-    }
-
     .woocommerce-breadcrumb {
         color: rgba( 255, 255, 255, .45 );
 
@@ -22,7 +18,7 @@
     }
 
     .term-description {
-        margin: 0 0 50px 0;
+        margin: 25px 0 50px 0;
         position: relative;
     }
 }
