--- a/includes/social-sharing/assets/scss/social-sharing.scss
+++ b/includes/social-sharing/assets/scss/social-sharing.scss
@@ -16,8 +16,16 @@
             margin: 0;
             text-align: left;
 
+            .rtl & {
+                text-align: right;
+            }
+
             .box-share-list {
                 margin: 0 0 0 8px;
+
+                .rtl & {
+                    margin: 0 8px 0 0;
+                }
             }
         }
 
